--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "cross-env NODE_ENV=production remix build",
     "dev": "cross-env NODE_ENV=development remix dev",
     "postinstall": "remix setup node",
-    "start": "cross-env NODE_ENV=production remix-serve build"
+    "start": "cross-env NODE_ENV=production remix-serve build",
+    "db:reset": "npx prisma db push"
   },
   "dependencies": {
     "@prisma/client": "^3.10.0",
